--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,9 @@ dependencies = [
     "pytest>=8.4.2",
     "redis>=6.4.0",
 ]
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "asyncio: marks tests as async tests",
+]
